--- a/.github/workflows/helloFlowProgramado.yml
+++ b/.github/workflows/helloFlowProgramado.yml
@@ -2,6 +2,8 @@ name: Hello Flow Programado
 on:
   schedule:
     - cron: "*/5 * * * *"
+  workflow_dispatch:
+
 jobs:
   first-job:
     runs-on: ubuntu-latest
@@ -10,3 +12,4 @@ jobs:
         run: echo "Hello World!"
       - name: Diga valeu
         run: echo "Valeu - bye!"
+g
